--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     {{ macros.nav(request) }}
   </nav>
 
-  <main class="max-w-4xl mx-auto p-4">
+  <main class="max-w-screen-x1 mx-auto p-4">
     {% block content %}{% endblock %}
   </main>
 
