--- a/templates/analysis_result.html
+++ b/templates/analysis_result.html
@@ -2,7 +2,7 @@
 {% block title %}Analysis Results{% endblock %}
 
 {% block content %}
-<main class="container mx-auto max-w-5xl p-2">
+<main class="container mx-auto max-w-screen-x1 p-2">
 <h1 class="text-2xl font-bold mb-6 flex items-center space-x-2">
   <!-- Chart Bar Icon (Heroicons) -->
   <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8 text-blue-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
