--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -2,7 +2,7 @@
 {% block title %}Playlists{% endblock %}
 
 {% block content %}
-<div class="max-w-3xl mx-auto p-4">
+<div class="max-w-screen-x1 mx-auto p-4">
   <h1 class="text-2xl font-bold mb-4">All Playlists</h1>
   <ul class="space-y-4">
     {% if playlists %}
