--- a/templates/unused/library_suggest.html
+++ b/templates/unused/library_suggest.html
@@ -2,7 +2,7 @@
 {% block title %}Library Suggestions{% endblock %}
 
 {% block content %}
-<div class="max-w-xl mx-auto p-4">
+<div class="max-w-screen-x1 mx-auto p-4">
   <h1 class="text-2xl font-bold mb-4">Library Playlist Suggestions</h1>
 
   {% if error %}
